# purplle-store-intelligence

./: .env.example  .gitignore  pyproject.toml
app/: config.py  ingestion.py  main.py  models.py  normalize.py  repository.py
config/: store_layout.json  stores.yaml
data/: sample_events.jsonl
pipeline/: __init__.py  tracker.py  types.py
tests/: conftest.py  test_ingestion.py  test_normalize.py  test_tracker.py
